WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305463
[LBSE] Fix marker-child-changes.svg crash
https://bugs.webkit.org/show_bug.cgi?id=305463
Summary
[LBSE] Fix marker-child-changes.svg crash
Rob Buis
Reported
2026-01-14 03:15:44 PST
Fix marker-child-changes.svg crash.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2026-01-14 04:12:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56553
EWS
Comment 2
2026-01-17 02:03:54 PST
Committed
305760@main
(0ef75d46ddd6): <
https://commits.webkit.org/305760@main
> Reviewed commits have been landed. Closing PR #56553 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-17 02:04:14 PST
<
rdar://problem/168353202
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug