[LBSE] Fix marker-child-changes.svg crash https://bugs.webkit.org/show_bug.cgi?id=305463

Reviewed by Nikolas Zimmermann.

In the test a style update is done on the rectangle in
the marker before any layout is done. A repaint of all
clients is issued and the client/path is not laid out yet so
will assert on hasPath().

To fix this do not call updateMarkerPositions if the
client renderer has not been laid out by returning early.

* Source/WebCore/rendering/ReferencedSVGResources.cpp:
(WebCore::CSSSVGResourceElementClient::resourceChanged):

Canonical link: https://commits.webkit.org/305760@main